...
        app:srcCompat="@drawable/box" />

    <TextView
        android:id="@+id/viewRemindersView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reminders"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButtonViewReminders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="#0e62fe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addNewReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add New Reminder"
        android:textSize="20sp"
        app:backgroundTint="#0e62fe"
        app:layout_constraintBottom_toTopOf="@+id/guideline67"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="132dp" />

    <ListView
        android:id="@+id/remindersListView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:fadeScrollbars="false"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarSize="12dip"
...
