<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".views.MainActivity">
    <!--    android:paddingTop="?attr/actionBarSize"-->

    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
    <!--        android:id="@+id/nav_view"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="0dp"-->
    <!--        android:layout_marginEnd="0dp"-->
    <!--        android:background="?android:attr/windowBackground"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:menu="@menu/bottom_nav_menu" />-->

    <!--    <androidx.fragment.app.FragmentContainerView-->
    <!--        android:id="@+id/nav_host_fragment"-->
    <!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        app:defaultNavHost="true"-->
    <!--        app:layout_constraintBottom_toTopOf="@id/nav_view"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:navGraph="@navigation/mobile_navigation" />-->


    <ScrollView
        android:id="@+id/buttonsScrollView"
        android:layout_width="wrap_content"
        android:layout_height="188dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/stroke_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerBox"
        app:layout_constraintVertical_bias="0.353"
        android:fadeScrollbars="false"
        android:scrollbarThumbVertical="@drawable/scrollbar"
        android:scrollbarSize="12dip"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/instructions_view_button"
                android:layout_width="wrap_content"
                android:layout_height="102dp"
                android:text="Instructions"
                android:textSize="35sp"
                app:backgroundTint="#0e62fe"
                tools:text="Instructions" />

            <Button
                android:id="@+id/activity_register_button"
                android:layout_width="match_parent"
                android:layout_height="102dp"
                android:layout_marginTop="10dp"
                android:text="Register"
                android:textSize="35sp"
                app:backgroundTint="#0e62fe"
                tools:text="Register" />

            <Button
                android:id="@+id/alarms_view_button"
                android:layout_width="match_parent"
                android:layout_height="102dp"
                android:layout_marginTop="10dp"
                android:text="@string/alarms"
                android:textSize="35sp"
                app:backgroundTint="#0e62fe" />

            <Button
                android:id="@+id/reminders_view_button"
                android:layout_width="match_parent"
                android:layout_height="102dp"
                android:layout_marginTop="10dp"
                android:text="@string/reminders"
                android:textSize="35sp"
                app:backgroundTint="#0e62fe" />

            <Button
                android:id="@+id/timers_view_button"
                android:layout_width="match_parent"
                android:layout_height="102dp"
                android:layout_marginTop="10dp"
                android:text="@string/timers"
                android:textSize="35sp"
                app:backgroundTint="#0e62fe" />

            <Button
                android:id="@+id/history_view_button"
                android:layout_width="match_parent"
                android:layout_height="102dp"
                android:layout_marginTop="10dp"
                android:text="@string/history"
                android:textSize="35sp"
                app:backgroundTint="#0e62fe"
                tools:text="history" />

            <Button
                android:id="@+id/about_activity_button"
                android:layout_width="match_parent"
                android:layout_height="102dp"
                android:layout_marginTop="10dp"
                android:text="About"
                android:textSize="35sp"
                app:backgroundTint="#0e62fe"
                tools:text="About" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/headerBox"
        android:layout_width="match_parent"
        android:layout_height="293dp"
        android:contentDescription="@string/header_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/box" />

    <TextView
        android:id="@+id/conciergeStatusText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:autoSizeMaxTextSize="35sp"
        android:autoSizeMinTextSize="20sp"
        android:autoSizeTextType="uniform"
        android:text="Give Concierge a command"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="35sp"
        app:autoSizeMaxTextSize="35sp"
        app:autoSizeMinTextSize="20sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tapToStartConciergeIcon" />

    <TextView
        android:id="@+id/holdToUseText"
        android:layout_width="209dp"
        android:layout_height="162dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="Hold to use Concierge"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintStart_toEndOf="@+id/tapToStartConciergeIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ibmLogo"
        android:layout_width="55dp"
        android:layout_height="47dp"
        android:contentDescription="@string/ibm_logo_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ibm_logo" />

    <ImageView
        android:id="@+id/uclLogo"
        android:layout_width="51dp"
        android:layout_height="44dp"
        android:contentDescription="@string/ucl_logo_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ucl_logo" />


    <ImageView
        android:id="@+id/tapToStartConciergeIcon"
        android:layout_width="159dp"
        android:layout_height="164dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:contentDescription="@string/start_concierge_icon_description"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/miciconoff" />

    <TextView
        android:id="@+id/scrollToViewButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Scroll through buttons below"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonsScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>